# omniintelligence

./: .cross-repo-policy.yaml  .env.example  .gitignore  .markdown-link-check.json  .migration_freeze  .pre-commit-config.yaml  .secrets.baseline  .yamlfmt  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_OMNIINTELLIGENCE_REFACTORING.md  HANDOFF_ORCHESTRATOR_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  OMNIARCHON_MIGRATION_INVENTORY.md  PLAN_OMN_1579_TOOL_FAILURE_DETECTION.md  QUICK_REFERENCE.md  README.md  TASK_BREAKDOWN.md  mypy.ini  pyproject.toml  test_validation_summary.json
migration_sources/omniarchon/python/: .coveragerc  .dockerignore  .env.example  .env.test  .gitignore  CIRCULAR_IMPORT_FIX.md  CODERABBIT_REVIEW_FIXES.md  CONCERNS_AND_ISSUES.md  COVERAGE_SETUP.md  DOCKER_SDK_MIGRATION_COMPLETE.md  ERROR_MONITORING_ENHANCEMENT.md  MIGRATION_CODE_COMPARISON.md  QUICK_REFERENCE.md  README.md  ROUND2_CLEANUP_CHANGES.txt  SECURITY_INVESTIGATION_SECRET_MASKING.md  SLACK_ALERTING_IMPLEMENTATION.md  TEST_README.md  debug_middleware.py  debug_testclient.py  pyproject.toml  pytest.ini  run_intelligence_tests.py  run_tests.sh  test_analysis.py  test_bridge_intelligence_corrected.py  test_bridge_negative_cases.py  test_intelligence_stamping.py  test_omninode_bridge_tools.py  test_validation_full.txt  test_validation_results.txt  test_validation_visual_summary.txt  validate_pytest_fix.sh  verify_path_exclusion_fix.py
migration_sources/omniarchon/python/docs/: ALERT_RUNBOOK.md  CONTAINER_NAME_VALIDATION.md  CONTAINER_NAME_VALIDATION_QUICK_REF.md  HOMELAB_TESTING.md  OBSERVABILITY.md  REAL_INTEGRATION_TESTS.md  SLACK_ALERTING.md  TESTING.md  TEST_FIXES_INTELLIGENCE_API.md
migration_sources/omniarchon/python/scripts/: index_onex_docs.py  measure_mcp_context.py  measure_menu_latency.py  measure_menu_latency_simple.py  monitor_ingestion_pipeline.py  start_local_mcp.sh  test_intelligence_data_quality.py  test_local_mcp_gateway.py  test_menu_coexistence.py  verify_real_integration_setup.sh
migration_sources/omniarchon/python/src/: __init__.py
migration_sources/omniarchon/python/tests/: API_INTEGRATION_ISSUES.md  README.md  RUN_TESTS.md  conftest.py  conftest_integration.py  test_api_essentials.py  test_async_background_task_manager.py  test_async_credential_service.py  test_async_embedding_service.py  test_async_llm_provider_service.py  test_async_source_summary.py  test_business_logic.py  test_code_extraction_source_id.py  test_config_rag.py  test_container_health_monitor.py  test_coverage_optimization.py  test_crawl_orchestration_isolated.py  test_db_manager.py  test_document_storage_metrics.py  test_embedding_service_no_zeros.py  test_intelligence_data_access.py  test_intelligence_service.py  test_kafka_consumer.py  test_keyword_extraction.py  test_log_sanitizer.py  test_memgraph.py  test_pipeline_alerting_validation.py  test_port_configuration.py  test_pre_push_intelligence.py  test_rag_integration.py  test_rag_simple.py  test_rag_strategies.py  test_service_integration.py  test_settings_api.py  test_source_id_refactor.py  test_source_race_condition.py  test_source_url_shadowing.py  test_supabase_validation.py  test_token_optimization.py  test_token_optimization_integration.py  (+2 more)
migration_sources/omniarchon/services/bridge/: .env.example  Dockerfile  README.md  app.py  http_client_config.py  pyproject.toml  test_unified_types.py
migration_sources/omniarchon/services/intelligence/: .env.example  .gitignore  BACKGROUND_TASK_RETRY_QUICK_REF.md  BRANCH_COMPLETION_CHECKLIST.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CONTRIBUTING.md  DATETIME_MIGRATION_VERIFICATION.md  Dockerfile  EVENT_HANDLER_CONTRACTS.md  FEEDBACK_LOOP_IMPLEMENTATION.md  HEALTH_CHECK_OPTIMIZATION.md  HEALTH_MONITORING_IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  INTELLIGENCE_EVENTS_IMPLEMENTATION.md  KAFKA_DOCKER_CONFIGURATION_COMPLETE.md  KNOWLEDGE_GRAPH_API_IMPLEMENTATION.md  ONEX_VALIDATION_PATTERNS.md  PATTERN_USAGE_TRACKING_IMPLEMENTATION.md  PHASE4_API_DOCUMENTATION.md  PLATFORM_HEALTH_IMPLEMENTATION.md  POLY_HANDOFF.md  PROBLEM_STATEMENT_INTELLIGENCE_ADAPTER.md  QUALITY_SCORER_INTEGRATION.md  QUALITY_TRENDS_SNAPSHOTS_IMPLEMENTATION.md  README.md  REAL_ONEX_PATTERNS.md  RESPONSE_FORMATTERS_IMPLEMENTATION.md  TRACK_3_IMPLEMENTATION_COMPLETE.md  USAGE_TRACKING_IMPLEMENTATION.md  VECTOR_INDEX_OLLAMA_MIGRATION.md  WARNINGS_FIXED.md  __init__.py  app.py  app.py.backup2  app.py.backup3  app.py.bak2  fix_circular_imports.py  fix_event_syntax.py  fix_wave6_tests.py  mcp_freshness_tools.py  (+20 more)
migration_sources/omniarchon/services/intelligence-consumer/: Dockerfile  MANIFEST_ACTIVATION_CHECKLIST.md  MANIFEST_INTEGRATION.md  README.md  pyproject.toml  test_worker_queue.py
migration_sources/omniarchon/services/langextract/: API_SPECIFICATION.md  Dockerfile  app.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_document.txt  test_extraction_document.txt  test_interface_fix.py
migration_sources/omniarchon/services/search/: Dockerfile  METADATA_FILTERS_USAGE.md  README.md  VALIDATION_QUICK_REFERENCE.md  app.py  pyproject.toml  test_chunking.py  test_search_models_v2.py
migration_sources/omniarchon/tests/: Dockerfile.test-runner  enhanced_mcp_integration_tests.py  framework_validation_test.py  pyproject.toml  requirements.test.txt  run_project_name_tests.sh  run_tree_tests.sh  service_communication_tests.py  shared_fixtures.py  sla_performance_tests.py  test_auto_apply_in_repo.py  test_permissive_mode.py  test_post_tool_use.py
migration_sources/omniarchon/tests/bridge/: test_content_extraction.py
migration_sources/omniarchon/tests/connectors/: test_knowledge_graph.py
migration_sources/omniarchon/tests/e2e/: test_ingestion_pipeline.py
migration_sources/omniarchon/tests/integration/: FILE_TREE_INTEGRATION_TESTS.md  FIXTURE_SCOPE_FIX.md  NODE_LABEL_CONSISTENCY_TESTS.md  PROJECT_NAME_PROPAGATION_TESTS.md  README.md  README_KAFKA_VECTORIZATION_TESTS.md  RUN_ENTITY_ID_VALIDATION_TESTS.md  RUN_FILE_TREE_TESTS.md  __init__.py  conftest.py  intelligence_service_api_test.py  test_agent_compatibility.py  (+30 more)
(+3981 files in other folders)
