[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omniintelligence"
version = "0.1.0"
description = "OmniIntelligence - Intelligence, indexing, and pattern services as first-class Omninode nodes"
authors = ["OmniNode Team <team@omninode.ai>"]
readme = "README.md"
packages = [{include = "omniintelligence", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
tenacity = "^9.0.0"
confluent-kafka = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.3.0"
pytest-xdist = "^3.5.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.0"

[tool.poetry.group.core.dependencies]
omnibase-core = {git = "https://github.com/OmniNode-ai/omnibase_core.git", branch = "main"}
omnibase-spi = {git = "https://github.com/OmniNode-ai/omnibase_spi.git", branch = "main"}
omninode-bridge = {git = "https://github.com/OmniNode-ai/omninode_bridge.git", branch = "main"}

[project]
name = "omniintelligence"
version = "0.1.0"
description = "Intelligence, indexing, and pattern services as first-class Omninode nodes"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.6.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
# Development dependencies for linting and testing
dev = [
    "mypy>=1.17.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.12.5",
    "requests>=2.31.0",
    "factory-boy>=3.3.0",
]

# Core node system dependencies
core = [
    # ONEX ecosystem dependencies
    "omnibase_core @ git+https://github.com/OmniNode-ai/omnibase_core.git@v0.1.0",
    "omnibase_spi @ git+https://github.com/OmniNode-ai/omnibase_spi.git@v0.1.0",
    # Web framework for API endpoints
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    # Event bus (Kafka/Redpanda)
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.6.0",
    # Vector database
    "qdrant-client>=1.15.1",
    # Graph database
    "neo4j>=5.28.2",
    # PostgreSQL
    "asyncpg>=0.29.0",
    # Document processing
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "markdown>=3.8",
    # AI/ML
    "openai>=1.71.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    # Utilities
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
    # Logging and monitoring
    "logfire>=0.30.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
]

# All dependencies for development and testing
all = [
    # Include all core dependencies
    "omnibase_core @ git+https://github.com/OmniNode-ai/omnibase_core.git@v0.1.0",
    "omnibase_spi @ git+https://github.com/OmniNode-ai/omnibase_spi.git@v0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.6.0",
    "qdrant-client>=1.15.1",
    "neo4j>=5.28.2",
    "asyncpg>=0.29.0",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "markdown>=3.8",
    "openai>=1.71.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
    "logfire>=0.30.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    # Test dependencies
    "mypy>=1.17.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.12.5",
    "requests>=2.31.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "RUF",   # Ruff-specific rules
]
ignore = [
    "S101",   # Allow assert statements in tests
    "E501",   # Allow line length violations (handled by Black)
    "B904",   # Allow raise without from in exception handlers
    "N812",   # Allow lowercase imported as non-lowercase
    "N815",   # Allow mixedCase variables
    "N806",   # Allow non-lowercase variable in function
    "N805",   # Allow cls as first argument
    "UP007",  # Allow Union syntax
    "SIM117", # Allow nested with statements
    "B008",   # Allow function call defaults
    "F841",   # Allow unused variables
    "RUF012", # Allow mutable class attributes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/omniintelligence/nodes"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "unit: marks tests as unit tests",
]
