[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# DEPENDENCY MANAGEMENT NOTES
# =============================================================================
# This project supports both Poetry and uv/PEP 621 dependency management.
#
# EDITABLE INSTALLS & uv.lock:
#   Editable installs (pip install -e .) bypass uv.lock resolution.
#   To verify reproducibility after editable install changes:
#     1. Remove uv.lock: rm uv.lock
#     2. Regenerate: uv lock
#     3. Verify sync: uv sync --group dev
# =============================================================================

[tool.poetry]
# Metadata defined in [project] section below (PEP 621 standard)
# Only Poetry-specific settings (like packages) go here
packages = [{include = "omniintelligence", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# Versions aligned with [project.dependencies] for consistency
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
httpx = ">=0.28.1"
tenacity = ">=8.2.0"
confluent-kafka = ">=2.6.0"
pyyaml = ">=6.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
# Versions aligned with [dependency-groups].dev for consistency
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.2.1"
pytest-mock = ">=3.12.0"
pytest-timeout = ">=2.3.0"
pytest-xdist = ">=3.5.0"
ruff = ">=0.12.5"
mypy = ">=1.17.0"
black = ">=24.10.0"
isort = ">=5.13.0"
types-PyYAML = ">=6.0.0"
requests = ">=2.31.0"
factory-boy = ">=3.3.0"
pre-commit = ">=4.5.0"

[tool.poetry.group.core.dependencies]
# ONEX ecosystem dependencies
# Version constraints use caret syntax: ^0.9.10 = >=0.9.10,<0.10.0
omnibase-core = "^0.12.0"
omnibase-spi = "^0.6.4"
omnibase-infra = "^0.3.0"
# Core runtime dependencies (also in base [tool.poetry.dependencies] for minimal installs)
# Included here for self-contained --only core installs
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
httpx = ">=0.28.1"
pyyaml = ">=6.0"
python-dotenv = ">=1.0.0"
tenacity = ">=8.2.0"
confluent-kafka = ">=2.6.0"
# Web framework for API endpoints
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
python-multipart = ">=0.0.20"
# Event bus (Kafka/Redpanda)
aiokafka = ">=0.10.0"
# Vector database
qdrant-client = ">=1.15.1"
# Graph database
neo4j = ">=5.28.2"
# PostgreSQL
asyncpg = ">=0.29.0"
# Document processing
pypdf2 = ">=3.0.1"
pdfplumber = ">=0.11.6"
python-docx = ">=1.1.2"
markdown = ">=3.8"
# AI/ML
openai = ">=1.71.0"
sentence-transformers = ">=4.1.0"
torch = ">=2.0.0"
transformers = ">=4.30.0"
tiktoken = ">=0.5.0"
# Utilities
cachetools = ">=5.3.0"
redis = {extras = ["hiredis"], version = ">=5.0.0"}
# Logging and monitoring
logfire = ">=0.30.0"
structlog = ">=23.1.0"
prometheus-client = ">=0.19.0"
psutil = ">=5.9.0"

[project]
name = "omniintelligence"
version = "0.1.0"
description = "Intelligence, indexing, and pattern services as first-class Omninode nodes"
authors = [{name = "OmniNode Team", email = "team@omninode.ai"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"
# Versions aligned with [tool.poetry.dependencies] for consistency
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.6.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
# Development dependencies for linting and testing
# Versions aligned with [tool.poetry.group.dev.dependencies] for consistency
dev = [
    "mypy>=1.17.0",
    "types-PyYAML>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.12.5",
    "requests>=2.31.0",
    "factory-boy>=3.3.0",
    "pre-commit>=4.5.0",
]

# Core node system dependencies
# Version constraints aligned with [tool.poetry.group.core.dependencies] caret syntax:
#   ^0.12.0 = >=0.12.0,<0.13.0  (compatible releases within 0.12.x)
#   ^0.6.4 = >=0.6.4,<0.7.0  (compatible releases within 0.6.x)
#   ^0.3.0 = >=0.3.0,<0.4.0  (compatible releases within 0.3.x)
core = [
    # ONEX ecosystem dependencies (version bounds match Poetry caret syntax)
    "omnibase-core>=0.12.0,<0.13.0",
    "omnibase-spi>=0.6.4,<0.7.0",
    "omnibase-infra>=0.3.0,<0.4.0",
    # Web framework for API endpoints
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    # Event bus (Kafka/Redpanda)
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.6.0",
    # Vector database
    "qdrant-client>=1.15.1",
    # Graph database
    "neo4j>=5.28.2",
    # PostgreSQL
    "asyncpg>=0.29.0",
    # Document processing
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "markdown>=3.8",
    # AI/ML
    "openai>=1.71.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    # Utilities
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
    # Logging and monitoring
    "logfire>=0.30.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

# All dependencies for development and testing
# Uses include-group (PEP 735) to compose from core and dev groups
# This eliminates duplication and prevents version drift between groups
all = [
    {include-group = "core"},
    {include-group = "dev"},
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "RUF",   # Ruff-specific rules
]
ignore = [
    "S101",   # Allow assert statements in tests
    "E501",   # Allow line length violations (handled by Black)
    "E402",   # Allow imports not at top (tests need sys.path setup, legacy emits warnings)
    "B904",   # Allow raise without from in exception handlers
    "B019",   # Allow lru_cache on methods (used carefully for singleton patterns)
    "B007",   # Allow unused loop control variables
    "N812",   # Allow lowercase imported as non-lowercase
    "N815",   # Allow mixedCase variables
    "N806",   # Allow non-lowercase variable in function
    "N805",   # Allow cls as first argument
    "UP007",  # Allow Union syntax
    "SIM117", # Allow nested with statements
    "SIM102", # Allow nested if statements (sometimes clearer than combining)
    "SIM103", # Allow explicit if/else returns (sometimes clearer)
    "B008",   # Allow function call defaults
    "F841",   # Allow unused variables
    "RUF012", # Allow mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
# AST visitor methods must use PascalCase (visit_Import, visit_Call, etc.)
"src/omniintelligence/audit/io_audit.py" = ["N802"]
"tests/unit/test_node_purity.py" = ["N802"]
# BaseHTTPRequestHandler requires do_GET method name
"src/omniintelligence/nodes/*/__main__.py" = ["N802"]
# __init__.py files re-export for public API
"src/omniintelligence/tools/__init__.py" = ["F401"]
# Test intentionally catches broad exceptions for validation error testing
"tests/nodes/pattern_extraction_compute/test_handlers.py" = ["B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/omniintelligence/nodes"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "unit: marks tests as unit tests",
    "audit: marks tests as I/O audit enforcement tests",
]
