[tool.poetry]
name = "archon-tests"
version = "0.1.0"
description = "Integration test suite for Archon platform"
authors = ["Archon Team"]
packages = [{include = ".", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
# Core testing framework
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-xdist = "3.3.1"  # Parallel test execution
pytest-html = "4.1.1"   # HTML test reports
pytest-json-report = "1.5.0"  # JSON test reports
pytest-benchmark = "4.0.0"  # Performance benchmarking
pytest-cov = "4.1.0"    # Test coverage
pytest-timeout = "2.2.0"  # Test timeouts

# HTTP client for API testing
httpx = "^0.25.0"
requests = "^2.31.0"

# Database connectivity
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"

# Development and debugging
ipdb = "^0.13.0"
rich = "^13.0.0"
typer = "^0.9.0"

# Performance and monitoring
psutil = "^5.9.0"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -v --tb=short --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests",
    "performance: performance tests",
    "smoke: smoke tests",
    "unit: unit tests",
    "critical: critical system tests",
    "intelligence_lifecycle: intelligence document lifecycle tests"
]

[tool.coverage.run]
source = ["tests"]
omit = ["*/tests/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
