[tool.poetry]
name = "archon-bridge"
version = "1.0.0"
description = "PostgreSQL-Memgraph bridge service for Archon"
authors = ["Archon Team"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
neo4j = "^5.15.0"
httpx = "^0.28.1"
# Database and vector store connections
asyncpg = "^0.29.0"
qdrant-client = "^1.6.0"
aiokafka = "^0.12.0"
confluent-kafka = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
