[tool.poetry]
name = "langextract"
version = "0.1.0"
description = "Language extraction service for Archon platform"
authors = ["Archon Team"]
readme = "API_SPECIFICATION.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.0"
setuptools = ">=65.0.0"
wheel = ">=0.38.0"
# Core dependencies for language extraction
httpx = "^0.28.1"
neo4j = "^5.15.0"
supabase = "2.15.1"
qdrant-client = "^1.6.0"
asyncpg = "^0.29.0"
numpy = "^1.24.3"
requests = "^2.31.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
